# scam-detector-reviews

./: .gitignore  LICENSE  README.md  core.py  dstack.yml  env.example  processor.py  processor_config.py  processor_utils.py  pyproject.toml  requirements.txt
review_classifier/: __init__.py  config.py  inference.py  text.py  ultrashort.py
scripts/: predict_csv.py
